# parser

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  compose.yaml  dockerfile
.github/workflows/: build.yaml  cd-checks.yaml  check.yaml  ci-cd.yaml  ci-checks.yaml  ci.yaml  deploy.yaml  prod-build.yaml  prod-deploy.yaml  prod-publish-crates.yaml  prod-publish-cratesio.yaml  prod-publish-docker.yaml  publish.yaml  publish.yml
benches/: function_parse.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: lib.rs  main.rs
crates/core/: Cargo.toml  README.md  build.rs
crates/core/benches/: function_parse.rs  parsing_benchmark.rs
crates/core/src/: constants.rs  errors.rs  lib.rs  parsers.rs
crates/core/src/parsers/: docx.rs  image.rs  pdf.rs  pptx.rs  text.rs  xlsx.rs
crates/core/tests/: parsing.rs
crates/parser-core/benches/: parsing_benchmark.rs
crates/parser-web/src/: main.rs
crates/parser-web/static/: script.js
crates/test-utils/: Cargo.toml  README.md
crates/test-utils/src/: lib.rs
crates/web/: Cargo.toml  README.md
crates/web/assets/: styles.css
crates/web/src/: errors.rs  lib.rs  main.rs
crates/web/src/routes/: parse.rs  static_files.rs
crates/web/tests/: endpoints.rs
docs/: api.md
docs.rs/: api.md
parser-bin/: Cargo.toml
parser-bin/src/: main.rs
parser-cli/: Cargo.toml  README.md
parser-cli/src/: main.rs
parser-core/: Cargo.toml
parser-core/benches/: parsing_benchmark.rs
parser-core/src/: errors.rs  lib.rs  parsers.rs
parser-core/src/parsers/: docx.rs  image.rs  pdf.rs  pptx.rs  text.rs  xlsx.rs
parser-core/tests/: parsing.rs
parser-core/tests/inputs/: test_docx_1.docx  test_txt_1.txt
parser-web/: Cargo.toml
parser-web/parser-core/src/: errors.rs  lib.rs
parser-web/parser-core/src/parsers/: docx.rs  image.rs  pdf.rs  xlsx.rs
parser-web/parser-core/tests/inputs/: test_docx_2.docx  test_pptx_1.pptx  test_txt_2.txt  test_xlsx_2.xlsx
parser-web/src/: config.rs  errors.rs  lib.rs  responses.rs  routes.rs
parser-web/src/routes/: hello.rs  parse.rs  static_files.rs
parser-web/static/: index.html  styles.css
parser-web/tests/: endpoints.rs
parser-web/tests/inputs/: test_xlsx_1.xlsx
scripts/: benchmark.sh  build.sh  deploy-tests.sh
src/: config.rs  core.rs  errors.rs  lib.rs  main.rs  routes.rs  web.rs
src/core/: constants.rs  errors.rs  parsers.rs
src/core/parsers/: docx.rs  image.rs  pdf.rs  pptx.rs  text.rs  xlsx.rs
src/parsers/: docx.rs  image.rs  pdf.rs  pptx.rs  text.rs  xlsx.rs
src/routes/: hello.rs  parse.rs  static_files.rs
src/web/: errors.rs  routes.rs
src/web/routes/: parse.rs  static_files.rs
static/: index.html  script.js  styles.css
tests/: endpoints.rs  parsing.rs
tests/assets/: test_csv_1.csv
tests/common/: mod.rs
