[package]
name = "parser"
version = "0.1.7"
edition = "2024"
authors = ["Leonard Excoffier"]
license = "MIT"
repository = "https://github.com/excoffierleonard/parser"
description = "A library and web API for extracting text from various file formats including PDF, DOCX, XLSX, PPTX, images via OCR, and more"
readme = "README.md"
keywords = ["parser", "pdf", "docx", "text-extraction", "ocr"]
categories = ["text-processing", "parsing", "web-programming::http-server"]

[lib]
name = "parser"
path = "src/lib.rs"

[[bin]]
name = "parser-web"
path = "src/main.rs"

[dependencies]
# Core parsing dependencies
calamine = "0.26.1"
docx-rs = "0.4.17"
infer = "0.16.0"
lazy_static = "1.4.0"
mime = "0.3.17"
pdf-extract = "0.8.0"
regex = "1.11.1"
tempfile = "3.9.0"
tesseract = "0.15.1"
zip = "2.3.0"

# Web API dependencies
actix-web = "4.9.0"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
mime_guess = "2.0.5"
rust-embed = { version = "8.5.0", features = ["interpolate-folder-path"] }
env_logger = "0.11.6"
dotenvy = "0.15.7"

[dev-dependencies]
criterion = "0.5"
num_cpus = "1.16.0"

[[bench]]
name = "function_parse"
harness = false
