[package]
name = "parser-web"
version = "0.1.0"
edition = "2021"

[dependencies]
parser-core = { workspace = true }
actix-web = { workspace = true }
serde = { version = "1.0.217", features = ["derive"] }
futures-util = "0.3.31"
actix-multipart = "0.7.2"
tempfile = "3.15.0"
mime_guess = "2.0.5"
rust-embed = "8.5.0"
dotenv = "0.15.0"
