[package]
name = "parser-cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Command-line interface for extracting text from various file formats"
documentation = "https://docs.rs/parser-cli"
readme = "README.md"
keywords = ["parser", "cli", "text-extraction", "pdf", "docx"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
parser-core = { workspace = true }
rayon = { workspace = true }
clap = { workspace = true }
