[package]
name = "parser-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = { workspace = true }
calamine = "0.26.1"
docx-rs = "0.4.17"
infer = "0.16.0"
lazy_static = "1.4.0"
mime = "0.3.17"
pdf-extract = "0.8.0"
regex = "1.11.1"
tempfile = "3.9.0"
tesseract = "0.15.1"
zip = "2.2.2"

[dev-dependencies]
criterion = "0.5"
parser-test-utils = { workspace = true }
rayon = { workspace = true }

[[bench]]
name = "parsing_benchmark"
harness = false
