[package]
name = "parser-core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "A library for extracting text from various file formats including PDF, DOCX, XLSX, PPTX, images via OCR, and more"
documentation = "https://docs.rs/parser-core"
readme = "README.md"
keywords = ["parser", "pdf", "docx", "text-extraction", "ocr"]
categories = ["text-processing", "parsing", "encoding"]

[dependencies]
calamine = { workspace = true }
docx-rs = { workspace = true }
infer = { workspace = true }
lazy_static = { workspace = true }
mime = { workspace = true }
pdf-extract = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
tesseract = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
parser-test-utils = { workspace = true }
rayon = { workspace = true }
num_cpus = { workspace = true }

[[bench]]
name = "function_parse"
harness = false
