[package]
name = "parser-test-utils"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Test utilities for the parser project"
documentation = "https://docs.rs/parser-test-utils"
readme = "README.md"
keywords = ["parser", "test", "utilities"]
categories = ["development-tools::testing"]

[dependencies]
