[package]
name = "parser-web"
version = "0.1.0"
edition = "2021"

[dependencies]
parser-core = { workspace = true }
actix-web = "4.9.0"
rayon = { workspace = true }
serde = { version = "1.0.217", features = ["derive"] }
futures-util = "0.3.31"
actix-multipart = "0.7.2"
mime_guess = "2.0.5"
rust-embed = { version = "8.5.0", features = ["interpolate-folder-path"] }
env_logger = "0.11.6"
dotenvy = "0.15.7"
