[package]
name = "parser-web"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Web API for extracting text from various file formats"
documentation = "https://docs.rs/parser-web"
readme = "README.md"
keywords = ["parser", "web", "api", "text-extraction", "pdf"]
categories = ["web-programming::http-server", "text-processing"]

[dependencies]
parser-core = { workspace = true }
actix-web = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
futures-util = { workspace = true }
actix-multipart = { workspace = true }
mime_guess = { workspace = true }
rust-embed = { workspace = true }
env_logger = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
parser-test-utils = { workspace = true }
